core/src/ast/snapshots/rain_core__ast__parser__test__maths_parens2.snap
---
source: core/src/ast/parser.rs
expression: "parse_display_expr(\"(3 - b) * c\")"
---
BinaryOp(
 BinaryOp(
  IntegerLiteral(
   3
  )
  -
  Ident(
   b
  )
 )
 *
 Ident(
  c
 )
)
