core/src/ast/snapshots/rain_core__ast__parser__test__number_add.snap
---
source: core/src/ast/parser.rs
expression: "parse_display_expr(\"1 + 1\")"
---
BinaryOp(
 IntegerLiteral(
  1
 )
 +
 IntegerLiteral(
  1
 )
)
