core/src/ast/snapshots/rain_core__ast__parser__test__number_add_left_associative.snap
---
source: core/src/ast/parser.rs
expression: "parse_display_expr(\"1 + 2 + 3\")"
---
BinaryOp(
 BinaryOp(
  IntegerLiteral(
   1
  )
  +
  IntegerLiteral(
   2
  )
 )
 +
 IntegerLiteral(
  3
 )
)
