core/src/ast/snapshots/rain_core__ast__parser__test__number_add_subtrace_multiply_divide_precedence.snap
---
source: core/src/ast/parser.rs
expression: "parse_display_expr(\"1 - 3 / 2 + 4 * 3\")"
---
BinaryOp(
 BinaryOp(
  IntegerLiteral(
   1
  )
  -
  BinaryOp(
   IntegerLiteral(
    3
   )
   /
   IntegerLiteral(
    2
   )
  )
 )
 +
 BinaryOp(
  IntegerLiteral(
   4
  )
  *
  IntegerLiteral(
   3
  )
 )
)
