core/src/ast/snapshots/rain_core__ast__parser__test__number_add_subtract_multiply_precedence.snap
---
source: core/src/ast/parser.rs
expression: "parse_display_expr(\"5 * 2 + 3 - 4\")"
---
BinaryOp(
 BinaryOp(
  BinaryOp(
   IntegerLiteral(
    5
   )
   *
   IntegerLiteral(
    2
   )
  )
  +
  IntegerLiteral(
   3
  )
 )
 -
 IntegerLiteral(
  4
 )
)
