core/src/ast/snapshots/rain_core__ast__parser__test__number_literal.snap
---
source: core/src/ast/parser.rs
expression: "parse_display_expr(\"4\")"
---
IntegerLiteral(
 4
)
