core/src/ast/snapshots/rain_core__ast__parser__test__number_multiply.snap
---
source: core/src/ast/parser.rs
expression: "parse_display_expr(\"1 * 2\")"
---
BinaryOp(
 IntegerLiteral(
  1
 )
 *
 IntegerLiteral(
  2
 )
)
