core/src/ast/snapshots/rain_core__ast__parser__test__number_multiply_add_precedence1.snap
---
source: core/src/ast/parser.rs
expression: "parse_display_expr(\"5 * 2 + 3\")"
---
BinaryOp(
 BinaryOp(
  IntegerLiteral(
   5
  )
  *
  IntegerLiteral(
   2
  )
 )
 +
 IntegerLiteral(
  3
 )
)
