core/src/ast/snapshots/rain_core__ast__parser__test__string_literal.snap
---
source: core/src/ast/parser.rs
expression: "parse_display_expr(\"\\\"asldjf\\\"\")"
---
StringLiteral(
 "asldjf"
)
